      [rt.cpan.org 35190] (imacat)
    * DISTVNAME was documented as a WriteMakefile() param but you'd
      get a warning if you tried to use it.  [rt.cpan.org 43217]
    * Better support for parallel make installs.
      [rt.cpan.org 32758] (Brendan O'Dea)
    * parse_version() will now skip uses of $VERSION in conditions
      [rt.cpan.org 9452] (jc@unser.net)

    Test Fixes
    * basic.t will not leave a "bin" environment variable defined on VMS.
      [rt.cpan.org 42150] (John E. Malmberg)
    * Made the tests work ok on systems whose makes assume that files which
      have the same mod time are out of date.  This is often the case for
      the tests which generate files and run make rapidly.
      [rt.cpan.org 29955] (Ken Hirsch)
    * skip test numbers were wrong on VMS in t/basic.t
      [rt.cpan.org 43511] (John E. Malmberg)

    Portability
    * Removed a few hard coded uses of the "false" command.
      [rt.cpan.org 44504]

    VMS
    * Fixed a few calls to catfile() that should be catdir().
      (John E. Malmberg)
    * Override catdir() and catfile() to expand macros.  This is normally done
      inside File::Spec::VMS but is really a MakeMaker-only thing.
      (John E. Malmberg)

    Other
    * Remove ExtUtils::MakeMaker::bytes and vmsish which are unused and
      seem to never have been used.


6.50  Sun Mar 22 12:28:06 PDT 2009
    Windows    
    * Remove the special checks for compilers that need a "manifest".  Instead,
      the code will just be a no-op if there's no manifest.  Or something.
      I dunno, I'm hoping Jan and Steve know what they're doing.
      [rt.perl.org 61492]


6.49_01  Thu Feb 19 17:06:36 PST 2009
    New OS Support
    * Recognize "Haiku", a resurrection of BeOS.

    New Features
    - META.yml now includes ExtUtils::MakeMaker in build_requires by
      default.

    Test Fixes
    - ExtUtils::Install 1.51 changed its output breaking some tests that
      were looking for /^Writing/ [rt.cpan.org 42927]
